noinst_HEADERS=\
	IActor.h			\
	IActorStage.h		\
	ICamera.h			\
	IConfig.h			\
	IDrawable.h			\
	IEffector.h			\
	IFollower.h			\
	IFont.h				\
	IFontMan.h			\
	IFontMetrics.h			\
	IGame.h				\
	ILoDQuadManager.h	\
	IMap.h				\
	IModelMan.h			\
	IMovementProvider.h	\
	IMovementReceiver.h	\
	IPositionProvider.h	\
	IPositionReceiver.h	\
	IProjectile.h		\
	ISkyBox.h			\
	ITerrain.h			\
	IView.h             \
	IWeapon.h
