SUBDIRS = \
	LoDTerrain	\
	actors          \
	ai              \
	camera          \
	clock           \
	collide         \
	config          \
	drawing         \
	engines         \
	environment     \
	flight          \
	fontman         \
	gunsight	\
	jogi            \
	math            \
	model           \
	physics         \
	scripting	\
	skybox		\
	texman		\
	ui			\
	weaponsys

