noinst_HEADERS =                        \
    config.hpp                          \
    static_assert.hpp                   \
    config/suffix.hpp                   \
    config/posix_features.hpp           \
    config/compiler                     \
    config/compiler/kai.hpp             \
    config/compiler/sgi_mipspro.hpp     \
    config/compiler/vacpp.hpp           \
    config/compiler/common_edg.hpp      \
    config/compiler/digitalmars.hpp     \
    config/compiler/gcc.hpp             \
    config/compiler/hp_acc.hpp          \
    config/compiler/mpw.hpp             \
    config/compiler/comeau.hpp          \
    config/compiler/sunpro_cc.hpp       \
    config/compiler/greenhills.hpp      \
    config/compiler/compaq_cxx.hpp      \
    config/compiler/borland.hpp         \
    config/compiler/intel.hpp           \
    config/compiler/visualc.hpp         \
    config/compiler/metrowerks.hpp      \
    config/select_platform_config.hpp   \
    config/stdlib                       \
    config/stdlib/libcomo.hpp           \
    config/stdlib/sgi.hpp               \
    config/stdlib/roguewave.hpp         \
    config/stdlib/vacpp.hpp             \
    config/stdlib/dinkumware.hpp        \
    config/stdlib/libstdcpp3.hpp        \
    config/stdlib/msl.hpp               \
    config/stdlib/stlport.hpp           \
    config/stdlib/modena.hpp            \
    config/platform                     \
    config/platform/macos.hpp           \
    config/platform/win32.hpp           \
    config/platform/amigaos.hpp         \
    config/platform/beos.hpp            \
    config/platform/irix.hpp            \
    config/platform/cygwin.hpp          \
    config/platform/solaris.hpp         \
    config/platform/aix.hpp             \
    config/platform/hpux.hpp            \
    config/platform/bsd.hpp             \
    config/platform/linux.hpp           \
    config/select_compiler_config.hpp   \
    config/user.hpp                     \
    config/select_stdlib_config.hpp
