SUBDIRS = \
	LoDTerrain	\
        actors          \
        ai              \
        camera          \
        clock           \
        collide         \
	config          \
        engines         \
        environment     \
	flight          \
        fontman         \
	gunsight	\
	horizon		\
        jogi            \
	map		\
        math            \
	model           \
        physics         \
	player		\
	sky		\
	skybox		\
	terrain         \
        ui

