SUBDIRS = \
	LoDTerrain	\
        actors          \
        ai              \
        camera          \
        clock           \
        collide         \
	config          \
        engines         \
        environment     \
	flight          \
        fontman         \
	gunsight	\
        jogi            \
	map		\
        math            \
	model           \
        physics         \
	skybox		\
	texman		\
        ui

