noinst_LIBRARIES = libengines.a

INCLUDES = -I${top_srcdir}/src

libengines_a_SOURCES = \
    controls.h controls.cc                      \
    ChasingEngine.h ChasingEngine.cc            \
    effectors.h effectors.cc                    \
    engine.h                                    \
    carengine.h carengine.cc                    \
    newtonianengine.h newtonianengine.cc        \
    missileengine.h missileengine.cc            \
    ObserverEngine.cc ObserverEngine.h          \
    flightengine.h flightengine.cc              \
    flightengine2.h flightengine2.cc            \
    flightengine3.h flightengine3.cc            \
    rigidengine.h rigidengine.cc                \
    tankengine.h tankengine.cc



