noinst_LIBRARIES = libscripting.a

INCLUDES = -I${top_srcdir}/src

libscripting_a_SOURCES = \
	IoIncludes.h	\
	IoScriptingManager.h IoScriptingManager.cc \
	mappings.h mappings.cc \
	ActorMapping.cc \
	ActorStageMapping.cc \
	ArmamentMapping.cc \
	ClockMapping.cc \
	ConfigMapping.cc \
	DroneMapping.cc \
	EnvironmentMapping.cc \
	EventMapping.cc \
	FactionMapping.cc \
	GameMapping.cc \
	LinalgMapping.cc \
	ModelMapping.cc \
	ModelManMapping.cc \
	ProviderMapping.cc \
	PrimitiveMappings.cc \
	ReceiverMapping.cc \
	SimpleActorMapping.cc \
	TankMapping.cc \
	TargeterMapping.cc \
	WeaponMapping.cc
	