noinst_LIBRARIES = libui.a

INCLUDES = -I${top_srcdir}/src

libui_a_SOURCES =                               \
        Component.h Component.cc                \
        Console.h Console.cc                    \
        Label.h Label.cc                        \
        loadingscreen.h loadingscreen.cc        \
        Panel.h Panel.cc                        \
        PanelRenderPass.h PanelRenderPass.cc    \
        status.h status.cc                      \
        Surface.h


