noinst_LIBRARIES = libui.a

INCLUDES = -I${top_srcdir}/src

libui_a_SOURCES =                               \
        Component.h Component.cc                \
        Console.h Console.cc                    \
        Dialog.h                                \
        Label.h Label.cc                        \
        loadingscreen.h loadingscreen.cc        \
        MainGUI.h MainGUI.cc                    \
        MainMenu.h MainMenu.cc                  \
        MissionSelector.h MissionSelector.cc    \
        Panel.h Panel.cc                        \
        PanelRenderPass.h PanelRenderPass.cc    \
        status.h status.cc                      \
        Surface.h


