noinst_LIBRARIES = libLoDTerrain.a

INCLUDES = -I${top_srcdir}/src

libLoDTerrain_a_SOURCES =                       \
        Config.h LoDTerrain.h                   \
        Collide.cc                              \
        Drawing.cc                              \
        Evaluator.cc                            \
        LoDTerrain.cc                           \
        LoDQuadManager.cc                       \
        image.cc image.h

