noinst_LIBRARIES = libcollide.a

INCLUDES = -I${top_srcdir}/src

libcollide_a_SOURCES =                         \
        BoundingBox.cc BoundingBox.h           \
        BoundingGeometry.cc BoundingGeometry.h \
        BoundingNode.cc BoundingNode.h         \
        Collidable.h Collidable.cc             \
        Contact.h Contact.cc                   \
        ContactPartner.h                       \
        GeometryInstance.h GeometryInstance.cc \
        PossibleContact.h PossibleContact.cc   \
        Primitive.cc Primitive.h               \
        SweepNPrune.h                          \
        CollisionManager.cc CollisionManager.h


