noinst_LIBRARIES = libjogi.a

INCLUDES = -I${top_srcdir}/src @LIBPNG_CFLAGS@

libjogi_a_SOURCES = \
    JCamera.cc JCamera.h \
    JLight.h JMaterial.h \
    JMatrix.cc JMatrix.h \
    JOpenGLRenderer.cc JOpenGLRenderer.h \
    JPoint.cc JPoint.h \
    JRenderer.h \
    JSprite.cc JSprite.h \
    error.h \
    jogi.h \
    types.h \
    types3d.h
