noinst_LIBRARIES = libmath.a

INCLUDES = -I${top_srcdir}/src

libmath_a_SOURCES =                     \
        Ballistic.cc Ballistic.h        \
        Collide.cc Collide.h            \
	Feedback.cc Feedback.h		\
        Interval.cc Interval.h          \
        Line.cc Line.h                  \
	Matrix.h SpecialMatrices.h MatrixVector.h \
		PIDController.h PIDController.cc \
        Plane.h                         \
        Polynomial.cc Polynomial.h      \
        Quaternion.h                    \
        Rendezvous.cc Rendezvous.h      \
        Solve.cc Solve.h                \
        Transform.h                     \
	Vector.cc Vector.h

