noinst_LIBRARIES = libscripting.a

INCLUDES = -I${top_srcdir}/src

libscripting_a_SOURCES = \
    Class.cc Class.h                \
    CommandLine.cc CommandLine.h    \
    DefineClass.cc DefineClass.h    \
    Environment.cc Environment.h    \
    Func.h                          \
    FuncImpl.cc FuncImpl.h          \
    Matcher.h                       \
    Scripting.cc Scripting.h        \
    Tokenizer.cc Tokenizer.h        \
    Tuple.cc Tuple.h                \
    TypedObject.h
