noinst_LIBRARIES = libprojectiles.a

INCLUDES = -I${top_srcdir}/src

libprojectiles_a_SOURCES = \
    aiminghelper.cc aiminghelper.h \
    bullet.cc bullet.h \
    dumbmissile.cc dumbmissile.h \
    Missile.cc Missile.h \
    ProjectileFactories.cc ProjectileFactory.h \
    smartmissile.cc smartmissile.h \
    smartmissile2.cc smartmissile2.h
